Fix footer spacing

--- a/style.css
+++ b/style.css
@@ -35,12 +35,11 @@ place {
 }
 
 #footer {
+  box-sizing: border-box;
   bottom: 0px;
-  max-width: 715px;
   border: 5px solid gray;
   border-top: 1px solid gray;
   border-right: none;
-  height: 60px;
 }
 
 #largequote {
